# mdlr

./: .gitignore  CMakeLists.txt
cmake/dependencies/: fmt.cmake  glfw.cmake  miniaudio.cmake  rubberband.cmake  sokol.cmake  soundtouch.cmake  stb.cmake  zlib.cmake
src/: main.cc
src/mdlr/: driver.cc  driver.h  engine.h  memory.h  miniaudio.cc.inl  module.cc  module.h  util.h
src/mdlr/modules/: core.h  enveloppe.h  midi.h  sequencer.h
tests/: example.cc
